# personal_music_librarian

./: README.md  pyproject.toml  requirements-dev.txt
src/personal_music_librarian/: __main__.py  app.py
src/personal_music_librarian/config/: defaults.py  paths.py  settings.py
src/personal_music_librarian/core/: hashing.py  metadata.py  scanner.py
src/personal_music_librarian/core/database/: db.py  query_builder.py  schema.sql
src/personal_music_librarian/core/metadata/: cover_art.py  normalizer.py  tags.py  validator.py  writer.py
src/personal_music_librarian/core/models/: album.py  file_entry.py  operation_log.py  track.py
src/personal_music_librarian/core/operations/: log_writer.py
src/personal_music_librarian/core/renamer/: conflict_checker.py  rename_plan.py  sanitizer.py  template_engine.py  templates.py
src/personal_music_librarian/core/scanner/: file_reader.py  tag_reader.py  track_mapper.py
src/personal_music_librarian/core/services/: batch_metadata_service.py  cover_art_service.py  duplicate_action_service.py  history_service.py  metadata_service.py  rename_service.py  scan_service.py  undo_service.py
src/personal_music_librarian/db/: database.py
src/personal_music_librarian/ui/: main_window.py
src/personal_music_librarian/ui/models/: history_table_model.py  rename_plan_table_model.py  track_table_model.py
src/personal_music_librarian/ui/pages/: album_art_page.py  albums_page.py  duplicates_page.py  history_page.py  library_page.py  rename_preview_page.py  (+1 more)
src/personal_music_librarian/workers/: scan_worker.py
tests/: test_database.py
(+5 files in other folders)
