[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-music-librarian"
version = "0.1.0"
description = "Safe FLAC music library manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "mutagen>=1.47",
    "blake3>=0.4",
    "send2trash>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
